<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory</string>

    <!-- Label for overflow menu option that inserts fake item data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all item data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All items</string>

    <!-- Label for overflow menu option that deletes all item data in the app [CHAR LIMIT=20] -->
    <string name="action_final_delete_all_entries">Final delete All items</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_item">Add an Item</string>
    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_item">Edit an Item</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Message for toast [CHAR LIMIT=20] -->
    <string name="error">Error with saving item</string>

    <!-- Message for toast [CHAR LIMIT=20] -->
    <string name="item_saved">Error with saving item</string>

    <!-- Label for editor overflow menu option that deletes the current item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="edit_description">Description</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="edit_email">Supplier e-mail</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="item_name">Item Name</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="edit_price">Sell Price</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="price">Price</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="edit_stock">Number of Items</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="quantity">Sell</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_name">Enter name of the item</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_description">Describe the item</string>
    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_suppliers_email">Enter the email address</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_price">Enter the price </string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="sell">Sell</string>
    <string name="sold">You have just sold one: </string>
    <string name="empty">Stock is empty. Place an order for:</string>
    <string name="added">Items Added</string>
    <string name="tobig">Max item quantity cannot be over 999</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="order">Order</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="add_stock">AddToStock</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_quantity">Enter number of items</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="image_from_camera">Take a photo</string>
    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="image_from_sd">Image from SD</string>

    <!-- Label for image [CHAR LIMIT=20] -->
    <string name="category_image">Image</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add an item [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding an Item</string>


    <string name="editor_insert_item_failed">Error with saving item</string>
    <string name="editor_update_item_failed">Error with updating item</string>
    <string name="editor_insert_item_success">Item saved</string>g>
    <string name="editor_update_item_success">Item updated</string>
    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->


    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="undeleted_changes_dialog_msg">Discard and quit deleting?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_item_failed">Error with deleting item</string>
    <string name="editor_delete_item_successful">Item deleted</string>
    <string name="unknown_producer">Unknown producer</string>

    <string name="discard_deleting">I do not want to delete all data</string>
    <string name="keep_deleting">I am sure to delete whole data</string>
    <string name="delete_all_items">items moved to recycle bin</string>
    <string name="delete_one_item">one item moved to recycle bin</string>
    <string name="delete_allitems_dialog_msg">Are you sure to delete all items?</string>
    <string name="delete_oneitem_dialog_msg">Are you sure to delete this item?</string>
    <string name="what_to_do_dialog_msg">What do you want to do? Test msg</string>
    <string name="final_delete_all_items">items deleted. Database is empty</string>
    <string name="final_delete_allitems_dialog_msg">Are you sure to final delete all items?</string>
    <string name="warning_invalid_input">Blank fields are not allowed</string>

    <string name="product_required">Product name required</string>
    <string name="description_required">Description required</string>
    <string name="email_required">Email required</string>
    <string name="email_wrong">Wrong format of email</string>
    <string name="price_required">Price required</string>
    <string name="quantity_required">Quantity required</string>
    <string name="picture_required">Picture required</string>

    <string name="dummy_pictureUri">android.resource://com.example.android.InventoryApp/drawable/cat</string>
</resources>
